# Database-Introduction-Project-

./: .gitattributes  Cargo.toml  LICENSE.md  README.md  bank.sql  justfile  login.txt  tailwind.config.js  tailwindcss.css
src/: admin.rs  lib.rs  main.rs
static/: tailwindcss.css
