[package]
name = "PruebaWeb"
version = "0.1.0"
edition = "2021"


[dependencies]
sqlx = { version = "0.6.2", features = ["mysql", "runtime-tokio-native-tls", "macros", "time"] }
tokio = { version = "1.21.2", features = ["full"] }
text_io = "0.1.10"
clap = { version = "4.0.24", features = ["derive"] }
anyhow = "1.0.66"
mac_address = "1.1.4"
